@@ -1,3 +1,8 @@
+2011-03-23  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/pj_initcache.c: Fix reversed memcpy that causes a crash on the
+	16th item put in the initcache. (#100).
+
 2011-02-21  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* src/pj_init.c: fix serious bug in locale handling, wasn't copying
